--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ img {
 }
 
 .container {
-  width: 1128px;
+  width: 1158px;
   padding: 0 15px;
   margin: 0px auto;
 }
@@ -67,6 +67,10 @@ img {
 
 .logo-studio {
   color: #2e2f42;
+}
+
+.menu-box {
+align-items: center;
 }
 
 .menu-box ul li {
