--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,18 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.list-sec-four {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.first-item-list {
+  width: calc((100% - 48px) / 3);
 }
 
 .card-header {
