--- a/css/styles.css
+++ b/css/styles.css
@@ -341,12 +341,15 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .card-text-sec {
   padding: 32px 16px;
    border: 1px solid #e7e9fc;
    margin-bottom: 8px;
+    border-top: none;
+
 }
 
 .card-text {
