--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,12 @@ img {
 .list-sec-three {
   display: flex;
   gap: 24px;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.list-item-three {
+  padding: 32px 0;
 }
 
 .our-team-backcolor {
