--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,8 @@ img {
 
 .our-team-backcolor {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .card-header-three {
@@ -311,12 +313,15 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
 .card-text-three {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 
 /* Section 4 */
