--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,11 @@ img {
 }
 
 /* Section 2 */
+
+.section-two {
+  padding: 120px 0;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
