--- a/css/styles.css
+++ b/css/styles.css
@@ -276,12 +276,22 @@ img {
   color: #2e2f42;
 }
 
+.list-sec-two {
+  display: flex;
+  gap: 24px;
+}
+
+.list-item-two {
+  width: calc((100% - 72px) / 4);
+}
+
 .section-head-two {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section-text-two {
