--- a/css/styles.css
+++ b/css/styles.css
@@ -219,13 +219,12 @@ img {
   letter-spacing: 0.02em;
   color: #ffffff;
   max-width: 496px;
-  /* height: 120px; */
   margin: 0px auto;
   padding-top: 188px;
 }
 
 .button {
-  display: flex;
+  display: block;
   background-color: #4d5ae5;
   font-weight: 500;
   line-height: 1.5;
@@ -233,8 +232,10 @@ img {
   color: #ffffff;
   cursor: pointer;
   text-align: center;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
+  border: none;
+  border-radius: 4px;
   margin: 188px auto;
 }
 
