--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ img {
 .header-box {
   width: 1440px;
   height: 72px;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-box .container {
@@ -62,6 +63,7 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-left: 156px;
+  margin-right: 76px;
   /* margin-bottom: 24px;  */
 }
 
@@ -205,8 +207,8 @@ img {
 /* Section 1 */
 
 .section-one {
-  width: 1128px;
-  height: 600px;
+  /* width: 1128px;
+  height: 600px; */
   padding: 188px 0;
   background-color: #2e2f42;
 }
