--- a/css/styles.css
+++ b/css/styles.css
@@ -77,10 +77,10 @@ img {
   display: inline-block;
 }
 
-.list-item {
+/* .list-item {
   display: flex;
   gap: 40px;
-}
+} */
 
 .menu-item {
   font-weight: 500;
