--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,6 @@ img {
   color: #ffffff;
   max-width: 496px;
   margin: 0px auto;
-  padding-top: 188px;
 }
 
 .button {
@@ -209,7 +208,8 @@ img {
   height: 56px;
   border: none;
   border-radius: 4px;
-  margin: 188px auto;
+  margin: 0px auto;
+  margin-top: 48px;
 }
 
 .button:hover {
